--- a/DemoPlatzi/appsettings.json
+++ b/DemoPlatzi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conn": "Data Source=(localDB)\\MSSQLLocalDB; Initial Catalog=ApiDemo3; Integrated Security=True; TrustServerCertificate=True"
+  }
 }
